Integration de un XML dans un Autre XML:
Integration du document test1.xml au niveau de client.hbm.xml

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,7 +70,8 @@ javac.classpath=\
     ${file.reference.Arial_norrow.jar}:\
     ${file.reference.lotoFont.jar}:\
     ${file.reference.ArbrePlaner.jar}:\
-    ${file.reference.AmineWeatherLib.jar}
+    ${file.reference.AmineWeatherLib.jar}:\
+    ${libs.primeFaces_6.0.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
